--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 
 <head>
   <meta charset="utf-8">
@@ -57,9 +57,6 @@
   <link href="css/business-frontpage.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet" type="text/css">
 
-  <!-- Font Awesome -->
-  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> -->
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -110,8 +107,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="text-center text-white mt-4 companyName resText">&lt; futureCoderSE &#47; &gt; </h1>
-          <h2 class="text-center text-white mt-4">Nurturing coding talent through work experience</h2>
+          <h1 class="text-center text-white mt-5 companyName resText">&lt; futureCoderSE &#47; &gt; </h1>
+          <h2 class="text-center text-white mt-5">Nurturing coding talent through work experience</h2>
         </div>
       </div>
     </div>
@@ -124,7 +121,7 @@
 
     <!-- row-->
     <div class="row">
-      <div class="col-sm-6 my-6">
+      <div class="col-sm-6 mb-2">
         <div class="card">
           <img class="card-img-top" src="media/images/workExperience.jpg" alt="Work Experience">
           <div class="card-body">
@@ -168,8 +165,7 @@
           </div>
         </div>
       </div>
-
-      <div class="col-sm-6 my-6">
+      <div class="col-sm-6 mb-2">
         <div class="card">
           <img class="card-img-top" src="media/images/coding.jpeg" alt="Coding">
           <div class="card-body">
@@ -236,7 +232,7 @@
 
     <!-- row-->
     <div class="row">
-      <div class="col-sm-6 my-6">
+      <div class="col-sm-6 mb-2">
         <div class="card">
           <img class="card-img-top" src="media/images/inspired.jpeg" alt="Inspired">
           <div class="card-body">
@@ -285,6 +281,7 @@
               <p>For more information about any of the opportunities listed below, please email
                 <a href="mailto:karen@futureCoders.org.uk" target="_top">karen@futureCoders.org.uk</a>
               </p>
+
               <!-- Page Content -->
               <div class="container">
 
@@ -853,7 +850,7 @@
         </div>
       </div>
 
-      <div class="col-sm-6 my-6">
+      <div class="col-sm-6 mb-2">
         <div class="card">
           <img class="card-img-top" src="media/images/businessSupport.jpeg" alt="Business Support">
           <div class="card-body">
@@ -916,19 +913,6 @@
     </div>
   </div>
 
-  <!-- Footer -->
-  <!-- <footer class="py-5 bg-dark fixed-footer">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; futureCoderSE
-        <script type="text/javascript">
-          document.write(new Date().getFullYear());
-        </script>
-      </p>
-      <p class="m-0 text-center text-white">Company No: 10593417 | UKPRN: 10066746</p>
-    </div>
-  </footer> -->
-
-
   <footer class="py-5 bg-dark">
     <div class="container">
       <div class="text-white">
@@ -936,7 +920,7 @@
           Copyright &copy;
           <script>
             document.write(new Date().getFullYear());
-          </script>, &lt; futureCoderSE &#47; &gt;
+          </script>, <span class="companyName">&lt; futureCoderSE &#47; &gt;</span> 
         </h5>
         <h6>
           Company No: 10593417
