Disabled Location map

--- a/about.html
+++ b/about.html
@@ -219,7 +219,7 @@
         </div>
         <!-- /.row -->
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-sm-4">
                 <h1>Where To Find Us</h1>
                 <address>
@@ -240,7 +240,7 @@
                         width="730" height="400" frameborder="0" style="border:0"></iframe>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <!-- /.container -->
 
