Added nav icon support and link to contact page

--- a/about.html
+++ b/about.html
@@ -5,8 +5,27 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="futureCoderSE">
+
+    <!-- favicon-->
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- HTML Meta Tags -->
     <meta name="description" content="@futureCodersSE nurturing coding talent through work-experience">
@@ -41,9 +60,6 @@
 
     <!-- Local CSS -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
-
-    <!-- Font Awesome -->
-    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -84,21 +100,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://medium.com/@futureCodersSE" target="_blank">Blog</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Us</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-
-    <!-- Header with Background Image -->
-    <!-- <header class="business-header">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <h1 class="display-3 text-center text-white mt-4">Business Name or Tagline</h1>
-          </div>
-        </div>
-      </div>
-    </header> -->
 
     <!-- Page Content -->
     <div class="container">
@@ -129,9 +137,6 @@
                     UK thrive for generations to come.
                 </p>
                 <h2>Meet Our Team</h2>
-                <!-- <p>
-                    <a class="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a> -->
-                </p>
             </div>
         </div>
 
@@ -179,9 +184,6 @@
                     <div class="card-body">
                         <h4 class="card-title text-center">Maggy Burns</h4>
                         <h6 class="text-center">Volunteer</h6>
-                        <!-- <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi
-                            doloribus.
-                        </p> -->
                     </div>
                     <div class="card-footer">
                         <a href="#" class="btn btn-primary">Contact</a>
@@ -194,9 +196,6 @@
                     <div class="card-body">
                         <h4 class="card-title text-center">Anthony Funai</h4>
                         <h6 class="text-center">Student Developer</h6>
-                        <!-- <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi
-                            doloribus.
-                        </p> -->
                     </div>
                     <div class="card-footer">
                         <a href="#" class="btn btn-primary">Contact</a>
@@ -209,7 +208,6 @@
                     <div class="card-body">
                         <h4 class="card-titleSmall text-center">Jamie Knott</h4>
                         <h6 class="text-center">Student Developer</h6>
-                        <!-- <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p> -->
                     </div>
                     <div class="card-footer">
                         <a href="#" class="btn btn-primary">Contact</a>
@@ -218,45 +216,10 @@
             </div>
         </div>
         <!-- /.row -->
-
-        <!-- <div class="row">
-            <div class="col-sm-4">
-                <h1>Where To Find Us</h1>
-                <address>
-                    <strong>Dragon Co-working</strong>
-                    <br> St George Hotel
-                    <br> 6 - 8 New Road Avenue
-                    <br> Rochester
-                    <br> Chatham
-                    <br> Kent
-                    <br> ME4 6BB
-                    <br>
-                    <abbr title="Landline">P:</abbr> +44 (0)1634 769048
-                </address>
-            </div>
-            <div class="col-sm-8">
-                <div class="responsive-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2490.1222581762404!2d0.516026315996229!3d51.3824310276534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8cd022884b257%3A0x999d15732879b726!2sDragon+Coworking!5e0!3m2!1sen!2suk!4v1529254023850"
-                        width="730" height="400" frameborder="0" style="border:0"></iframe>
-                </div>
-            </div>
-        </div> -->
     </div>
     <!-- /.container -->
 
     <br />
-
-    <!-- Footer -->
-    <!-- <footer class="py-5 bg-dark fixed-footer">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; futureCodersSE
-                <script type="text/javascript">
-                    document.write(new Date().getFullYear());
-                </script>
-            </p>
-            <p class="m-0 text-center text-white">Company No: 10593417 | UKPRN: 10066746</p>
-        </div>
-    </footer> -->
 
     <footer class="py-5 bg-dark">
         <div class="container">
@@ -265,7 +228,7 @@
                     Copyright &copy;
                     <script type="text/javascript">
                         document.write(new Date().getFullYear());
-                    </script>, &lt; futureCoderSE &#47; &gt;
+                    </script>, <span class="companyName">&lt; futureCoderSE &#47; &gt;</span> 
                 </h5>
                 <h6>
                     Company No: 10593417
